[package]
name = "minify_dpm"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
wasm-bindgen = "=0.2.81"
minify-js = "0.1.5"
minify-html = "0.9.2"
css-minify = "0.2.2"
minify = "1.3.0"
serde_json = "1.0.85"
